--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
-html {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+body {
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+body * {
+  flex: auto;
 }
 
 .section-main, footer { 
