--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  font-family: 'Roboto', sans-serif;
 }
 
 body * {
@@ -15,7 +16,40 @@ body * {
 
 .section-main, footer { 
   background-color: #1F2937;
+  color: #e5E7EB;
 }
+
+.section-main {
+  display: flex;
+  flex-direction: column;
+  font-size: 18px;
+}
+
+.section-main h2 {
+  color: #f9faf8;
+  font-size: 48px;
+  font-weight: 900;
+}
+
+.section-main button {
+  background-color: #3882F6;
+  border: 0;
+  border-radius: 12px;
+  padding: 8px 16px;
+  color: #f9faf8;
+}
+
+nav {
+  display: flex;
+}
+
+nav h1 {
+  font-size: 24px;
+  color: #f9faf8;
+  font-weight: 900;
+}
+
+
 
 aside.quote {
   background-color: #e5e7eb;
