--- a/style.css
+++ b/style.css
@@ -88,6 +88,34 @@ main > img {
   max-width: 450px;
 }
 
+.section-information {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.section-information > h2 {
+  padding: 56px 0;
+}
+
+.icons {
+  display: flex;
+  padding-bottom: 40px;
+  text-align: center;
+}
+
+.icon {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0 8px;
+}
+
+.icon > img {
+  width: 100px;
+  padding-bottom: 8px;
+}
+
 aside.quote {
   background-color: #e5e7eb;
 }
