--- a/style.css
+++ b/style.css
@@ -112,13 +112,14 @@ main > img {
 }
 
 .icon > img {
-  width: 100px;
+  width: 80px;
   padding-bottom: 8px;
+  
 }
 
 .quote {
   background-color: #e5e7eb;
-  padding: 80px 300px;
+  padding: 40px 300px;
 }
 
 .quote-text {
@@ -131,6 +132,27 @@ main > img {
   text-align: right;
 }
 
-section.sign-up {
-  background-color: #3882F6;
+.section-signup {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 48px;
 }
+
+section.signup {
+  background-color: #3882F6;
+  color: #f9faf8;
+  display: flex;
+  justify-content: space-between;
+  padding: 32px 64px;
+  gap: 300px;
+  border-radius: 8px;
+  align-items: center;
+}
+
+.signup > button {
+  background-color: #3882F6;
+  border: 2px solid #f9faf8;
+  color: #f9faf8;
+}
+
