--- a/style.css
+++ b/style.css
@@ -156,3 +156,10 @@ section.signup {
   color: #f9faf8;
 }
 
+footer {
+  text-align: center;
+  padding: 16px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
