--- a/style.css
+++ b/style.css
@@ -137,7 +137,8 @@ main > img {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 48px;
+  padding-top: 48px;
+  padding-bottom: 48px;
 }
 
 section.signup {
@@ -146,6 +147,7 @@ section.signup {
   display: flex;
   justify-content: space-between;
   padding: 32px 64px;
+  flex: auto;
   gap: 300px;
   border-radius: 8px;
   align-items: center;
